# Test_controller

./: .project  README.md
cl_controller/: .project  CMakeLists.txt  package.xml
cl_controller/config/: controller_params.yaml
cl_controller/include/: ClController.h
cl_controller/launch/: clc.launch
cl_controller/src/: ClController.cpp  cl_controller_node.cpp
rowesys_launch/: CMakeLists.txt  README.md  package.xml
rowesys_launch/launch/: autonomous_navigation.launch  autonomous_navigation_gf.launch  autonomous_navigation_mpc.launch  manual_drive.launch  manual_line_detection.launch  manual_state_estimator.launch  rowesys_all.launch  rowesys_all_gf.launch
rowesys_mpc_planner/: CMakeLists.txt  package.xml
rowesys_mpc_planner/src/: rowesys_simple_mpc.py
smb_common/smb_gazebo/launch/: smb_gazebo.launch  smb_gazebo2.launch
smb_highlevel_controller/src/: SmbHighlevelController.cpp
transform_quad/: CMakeLists.txt  package.xml
transform_quad/scripts/: quad_to_euler.py
