<?xml version="1.0"?>
<package format="2">
  <name>cl_controller</name>
  <version>0.0.0</version>
  <description>closed loop controller package</description>
	
  <maintainer email="mbrandes@ethz.ch">mbrandes</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>


</package>